# devtrackr

./: .coveragerc  .env  .flake8  .gitignore  .pre-commit-config.yaml  .pytestignore  Dockerfile  LEARNING.md  README.md  VERCEL_DEPLOYMENT.md  alembic.ini  config.py  db.py  deps.py  docker-compose.yml  main.py  middleware.py  models.py  pagination.py  pyproject.toml  pytest.ini  requirements.txt  run.py  run_tests.py  schemas.py  search_utils.py  setup.ps1  setup.sh  test_pagination.py  test_search.py  utils.py  vercel.json
.github/actions/: README.md
.github/workflows/: deploy.yml  migrations.yml  quality.yml
alembic/: env.py
alembic/versions/: 05a2837a075d_add_users_and_authentication.py  598d0a354503_add_category_field_to_tasks.py  74ff0214f0db_create_tasks_table_actual.py  add_fulltext_search_index.py  add_task_priority_enum.py  afb259fba0a3_create_tasks_table.py  d195cb179a74_add_time_tracking_system_with_timeentry_.py
api/: hello.py  index.py  migrate.py  requirements.txt  simple.py  test.py  test_minimal.py  vercel_config.py
config/: __init__.py  config.py  middleware.py
core/: __init__.py  db.py  deps.py  models.py  schemas.py
demos/: README.md  activity_logging.py  api_examples.py  basic_demo.py  demo_summary.py  demo_utils.py  search_capabilities.py  startup_guide.py
deployment/: DEBUG_FUNCTION_CRASH.md  README.md  VERCEL_TROUBLESHOOTING.md  __init__.py
deployment/configs/: __init__.py  vercel-minimal.json  vercel-test-minimal.json
deployment/scripts/: __init__.py  deploy-test.py
devtrackr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: DEVELOPMENT.md  PAGINATION_GUIDE.md  SEARCH_GUIDE.md  TESTING_SUMMARY.md
manual_tests/: README.md  pagination_integration_test.py  search_integration_test.py
routers/: __init__.py  activity.py  auth.py  metrics.py  tasks.py  time_tracking.py
scripts/: __init__.py  setup.ps1  setup.sh
services/: __init__.py  activity_logger.py
src/: __init__.py  main.py
src/core/: __init__.py  config.py  database.py  dependencies.py  middleware.py  security.py
src/models/: __init__.py  activity.py  base.py  task.py  time_entry.py  user.py
src/routes/: __init__.py  activity.py  auth.py  metrics.py  tasks.py  time_tracking.py
src/schemas/: __init__.py  activity.py  metrics.py  task.py  time_entry.py  user.py
src/services/: __init__.py  activity_logger.py
src/utils/: __init__.py  pagination.py  search_utils.py  utils.py
tests/: README.md  conftest.py  test_auth.py  test_metrics.py  test_pagination_manual.py  test_search_manual.py  test_tasks.py  test_tasks_api.py  test_time.py  test_time_tracking.py
utils/: __init__.py  search_utils.py  utils.py
